<resources>
    <string name="app_name">ConferenceRoomTabletVersion</string>
    <string name="progress_message">Loading...</string>
    <string name="field_cant_be_empty">field can\'t be empty</string>
    <string name="room_capacity_must_be_more_than_0">Invalid passcode</string>
    <string name="slot_unavailable">This slot is unavailable!</string>
    <string name="not_found">Not Found</string>
    <string name="no_booking_available">No booking available</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="status_of_internet">status_of_internet</string>
    <string name="please_check_internet_connection">Please check network connection!</string>
    <string name="permission_required">Permission Required To Book Room</string>
    <string name="do_not_share">DO NOT SHARE</string>
    <string name="server_error">Some Internal server Error!</string>
    <string name="meeting_time_extended">meeting time extended</string>
    <string name="preference">Preference</string>
    <string name="meeting_started">Started</string>
    <string name="booked">Booked</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="action_seetings">Settings</string>
    <string name="cant_extend">Can\'t be extend! next meeting is scheduled</string>
    <string name="free_for_the_day">Free for rest of the day</string>
    <string name="cant_book">can\'t use. next meeting is scheduled</string>
    <string name="booked_successfully">Successfully Booked</string>
    <string name="default_feedback">This app is cool!</string>
    <string name="end_meeting">End Meeting</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="occupied">Occupied</string>
    <string name="end_the_booking_now">End the booking now?</string>
    <string name="got_feedback">How was the booking experience??</string>
    <string name="available">Available</string>
    <string name="extend">EXTEND</string>
    <string name="end_now">END NOW</string>
    <string name="confirm">CONFIRM</string>
    <string name="_45">45</string>
    <string name="_60">60</string>
    <string name="_30">30</string>
    <string name="_15">15</string>
    <string name="minutes_to_extend">Minutes to extend</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="local_booking">Local Booking</string>
    <string name="book">Book</string>
    <string name="start">START</string>
    <string name="welcome_to_nineleaps">Welcome to Nineleaps</string>
    <string name="bad_feedback_placeholder">What went bad?</string>
    <string name="average_feedback_placehoolder">What can be improved?</string>
    <string name="good_feedback_placeholder">Any feedback?</string>
    <string name="bad_feedback_default_messgae">Application is not good!</string>
    <string name="average_feedback_default_message">Application is good!</string>
    <string name="good_feedback_default_message">Application is pretty cool!</string>
    <string name="format_in_hh_mm">HH:mm</string>
    <string name="format_in_hh_mm_a">HH:mm a</string>
    <string name="middle_slot">Middle</string>
    <string name="format_in_hh_mm_ss">HH:mm:ss</string>
    <string name="format_in_yyyy_M_dd_hh_mm">yyyy-M-dd HH:mm</string>
    <string name="format_in_yyyy_mm_dd_hh_mm_ss">YYYY-MM-dd HH:mm:ss</string>
    <string name="incorrect_passcode">Incorrect passcode!</string>
    <string name="end">End</string>
    <string name="middle">Middle</string>
    <string name="confirm_booking">CONFIRM BOOKING</string>
    <string name="started">Started</string>
    <string name="format_in_yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="message_for_invalid_time_selection">Start time must be earlier than end time</string>
    <string name="_2_30pm">2:30 PM</string>
    <string name="room_name_hint">Conference Room Name, Main Building</string>
    <string name="room_capacity_hint">5 seater</string>
    <string name="amenities_hint">Extension Board, Whiteboard marker, Monitor, Projector, Speaker</string>
    <string name="current_time_hint">4:04 PM</string>
    <string name="day_date_hint">Tuesday, June 18</string>
    <string name="available_till_11_45_pm">Available till 11:45 PM</string>
    <string name="booked_by_prateek_for_1_hour_and_15_minutes">Booked by Prateek for 1 hour and 15 minutes</string>
    <string name="start_end_time_hint">4:30PM - 6:00PM</string>
    <string name="today_s_booking">Today\'s Booking</string>
    <string name="passcode">Passcode</string>
    <string name="start_time">Start-Time</string>
    <string name="end_time">End-Time</string>
    <string name="time_hint">12:45</string>
    <string name="cancel">CANCEL</string>
    <string name="ended">Ended</string>
    <string name="for_15_minutes">for 15 minutes</string>
    <string name="select_building">Select Building</string>
    <string name="unblock">UNBLOCK</string>
    <string name="unblock_room_now">Unblock room now?</string>
    <string name="room_unblocked">Room unblocked</string>
    <string name="under_maintenance">Under Maintenance</string>
    <string name="blocked">Blocked</string>
    <string name="no_rooms_in_building">No Room in the Buildings</string>
    <string name="select_rooms">Select Room</string>
    <string name="organiser">Organiser :</string>
    <string name="no_internet">No Internet</string>
    <string name="past">Past</string>
    <string name="format_in_hh">HH</string>


</resources>
