<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/room_details_gradiant"
        android:id="@+id/extend_main_layout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_height="match_parent">
    <RelativeLayout
            android:background="@color/light_color_gradiant"
            android:id="@+id/extend_layout"
            android:layout_marginStart="@dimen/dp_177"
            android:layout_marginEnd="@dimen/dp_177"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/extend_back"
                android:gravity="center"
                android:onClick="extendBack"
                android:padding="@dimen/dp_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_8"
                android:text="@string/back"
                android:fontFamily="@font/nunito"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/white"
        />
        <TextView
                android:layout_below="@id/extend_back"
                android:id="@+id/min_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/minutes_to_extend"
                android:fontFamily="@font/nunito"
                android:layout_marginTop="@dimen/dp_24"
                android:textSize="@dimen/sp_24"
                android:textColor="@color/white"/>
        <LinearLayout
                android:id="@+id/extend_min_layout"
                android:layout_below="@+id/min_label"
                android:weightSum="5"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:background="@drawable/duration_background_selected"
                    android:gravity="center"
                    android:text="@string/_15"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="#F4733F"
                    android:id="@+id/extend_min_15"
                    android:layout_width="@dimen/dp_94"
                    android:layout_height="@dimen/dp_49"/>
            <TextView
                    android:background="@drawable/passcode_background"
                    android:gravity="center"
                    android:text="@string/_30"
                    android:layout_marginStart="@dimen/dp_24"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
                    android:id="@+id/extend_min_30"
                    android:layout_width="@dimen/dp_94"
                    android:layout_height="@dimen/dp_49"/>
            <TextView
                    android:background="@drawable/passcode_background"
                    android:gravity="center"
                    android:text="@string/_45"
                    android:layout_marginStart="@dimen/dp_24"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
                    android:id="@+id/extend_min_45"
                    android:layout_width="@dimen/dp_94"
                    android:layout_height="@dimen/dp_49"/>
            <TextView
                    android:background="@drawable/passcode_background"
                    android:gravity="center"
                    android:text="@string/_60"
                    android:layout_marginStart="@dimen/dp_24"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
                    android:id="@+id/extend_min_60"
                    android:layout_width="@dimen/dp_94"
                    android:layout_height="@dimen/dp_49"/>
        </LinearLayout>

        <TextView
                android:id="@+id/extend_confirm_fragment"
                android:gravity="center"
                android:onClick="confirmExtendMeeting"
                android:layout_width="@dimen/dp_244"
                android:layout_height="@dimen/dp_48"
                android:layout_alignParentBottom="true"
                android:text="@string/confirm"
                android:layout_marginBottom="@dimen/dp_60"
                android:textStyle="bold"
                android:background="@drawable/action_button_border"
                android:fontFamily="@font/nunito"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/dp_24"
                android:textSize="@dimen/sp_18"/>

    </RelativeLayout>

</RelativeLayout>

