<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:textColor="@color/black"
            android:textSize="28sp"
            android:text="@string/end_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_marginTop="16dp"
            android:textSize="25sp"
            android:text="Are you sure wants to cancel the meeting?"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/errorColor"
                android:id="@+id/yes_text_view"
                android:textSize="28sp"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="32dp"
                android:layout_toLeftOf="@id/yes_text_view"
                android:id="@+id/no_text_view"
                android:textSize="28sp"
                android:layout_marginEnd="80dp"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>