<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_weight="3"
        android:id="@+id/relative_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--running and available meeting layout-->
    <RelativeLayout
            android:visibility="visible"
            android:background="@drawable/gradiant_for_available_room"
            android:id="@+id/booking_details_layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/status_of_room_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_24"
                android:textSize="@dimen/sp_36"
                android:fontFamily="@font/nunito"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/available"/>

        <TextView
                android:id="@+id/available_till_text_view_fragment"
                android:layout_below="@+id/status_of_room_text_view"
                android:layout_width="wrap_content"
                android:text="@string/free_for_the_day"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_32"
                android:textSize="@dimen/sp_20"
                android:fontFamily="@font/nunito"
                android:textColor="#BFFFFFFF"
                android:textColorHint="@color/white"/>


        <View
                android:layout_below="@+id/available_till_text_view_fragment"
                android:id="@+id/line_fragment"
                android:background="@drawable/view_border_line"
                android:layout_width="4dp"
                android:layout_height="78dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
        />
        <RelativeLayout
                android:id="@+id/meeting_details_relative_layout_fragment"
                android:layout_marginStart="24dp"
                android:background="@drawable/meeting_detail_layout_border"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/available_till_text_view_fragment"
                android:layout_width="445dp"
                android:layout_height="78dp">

            <TextView
                    android:id="@+id/meeting_organiser_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginTop="@dimen/dp_8"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/booked_by_prateek_for_1_hour_and_15_minutes"/>

            <TextView
                    android:id="@+id/meeting_time_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/start_end_time_hint"/>
        </RelativeLayout>
        <LinearLayout
                android:layout_below="@+id/meeting_details_relative_layout_fragment"
                android:layout_marginTop="@dimen/dp_32"
                android:orientation="horizontal"
                android:id="@+id/end_extend_action_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/unblock_room_fragment"
                    android:gravity="center"
                    android:layout_width="135dp"
                    android:layout_height="45dp"
                    android:text="@string/unblock"
                    android:textStyle="bold"
                    android:onClick="unBlockRoom"
                    android:visibility="gone"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:layout_marginStart="24dp"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/start_meeting_fragment"
                    android:gravity="center"
                    android:layout_width="135dp"
                    android:layout_height="45dp"
                    android:text="@string/start"
                    android:textStyle="bold"
                    android:onClick="startMeeting"
                    android:visibility="gone"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:layout_marginStart="24dp"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/extend_meeting_fragment"
                    android:gravity="center"
                    android:layout_width="135dp"
                    android:onClick="extendMeeting"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/extend"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/dp_24"
                    android:textSize="@dimen/sp_18"/>
            <TextView
                    android:id="@+id/end_meeting_fragment"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:onClick="endMeeting"
                    android:layout_width="155dp"
                    android:layout_height="@dimen/dp_48"
                    android:text="@string/end_now"
                    android:visibility="gone"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:layout_marginStart="@dimen/dp_24"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:background="#0F000000"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="189dp">
            <TextView
                    android:textColor="@color/white"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_24"
                    android:text="@string/today_s_booking"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_24"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:visibility="visible"
                    android:id="@+id/recycler_view_todays_booking_list"
                    android:layout_width="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/layout_for_time_slot"/>
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>

