<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:visibility="visible"
            android:background="@drawable/room_details_gradiant"
            android:id="@+id/end_meeting_main_layout"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent">
        <RelativeLayout
                android:background="@color/light_color_gradiant"
                android:id="@+id/end_meeting_confirm_layout"
                android:layout_marginStart="@dimen/dp_177"
                android:layout_marginEnd="@dimen/dp_177"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/back"
                    android:onClick="endBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/back"
                    android:padding="@dimen/dp_16"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
            />
            <TextView
                    android:layout_below="@+id/back"
                    android:id="@+id/end_the_boo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_marginTop="@dimen/dp_48"
                    android:textSize="@dimen/sp_24"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:text="@string/end_the_booking_now"
            />
            <TextView
                    android:id="@+id/end_meeting_confirm"
                    android:gravity="center"
                    android:onClick="confirmEndMeeting"
                    android:layout_width="@dimen/dp_135"
                    android:layout_height="@dimen/dp_48"
                    android:layout_alignParentBottom="true"
                    android:text="@string/confirm"
                    android:layout_marginBottom="@dimen/dp_60"
                    android:textStyle="bold"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/dp_24"
                    android:textSize="@dimen/sp_18"/>
        </RelativeLayout>
</RelativeLayout>

