<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@drawable/gradiant_for_available_room"
            android:id="@+id/book_now_main_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="match_parent">
        <RelativeLayout
                android:background="@color/light_color_gradiant"
                android:id="@+id/book_now_layout"
                android:layout_marginStart="@dimen/dp_177"
                android:layout_marginEnd="@dimen/dp_177"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/book_back"
                    android:gravity="center"
                    android:padding="@dimen/dp_16"
                    android:drawablePadding="@dimen/dp_16"
                    android:onClick="bookBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="@string/back"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
            />
            <TextView
                    android:layout_below="@id/book_back"
                    android:id="@+id/passcode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_24"
                    android:text="@string/passcode"
                    android:layout_marginTop="@dimen/dp_16"
                    android:fontFamily="@font/nunito"
                    android:textSize="@dimen/sp_24"
                    android:textColor="@color/white"
            />

            <EditText
                    android:background="@drawable/passcode_background"
                    android:layout_marginStart="@dimen/dp_24"
                    android:id="@+id/passcode_edit_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    android:letterSpacing="2"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/dp_24"
                    android:maxLength="6"
                    android:fontFamily="@font/nunito"
                    android:layout_below="@+id/passcode_label"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_width="@dimen/dp_456"
                    android:layout_height="@dimen/dp_49"/>

            <TextView
                    android:id="@+id/passcode_error_message"
                    android:layout_below="@id/passcode_edit_text"
                    android:layout_width="wrap_content"
                    android:textColor="@color/error_color"
                    android:layout_marginStart="@dimen/dp_350"
                    android:visibility="invisible"
                    android:text="@string/field_cant_be_empty"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_32"
                    android:text="@string/start_time"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nunito"
                    android:layout_below="@+id/passcode_edit_text"
                    android:id="@+id/start_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_marginTop="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_380"
                    android:text="@string/end_time"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nunito"
                    android:layout_below="@+id/passcode_edit_text"
                    android:id="@+id/end_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:id="@+id/duration_min_layout"
                    android:layout_below="@+id/start_time_label"
                    android:weightSum="3"
                    android:layout_marginStart="@dimen/dp_24"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:background="@drawable/passcode_background"
                        android:hint="@string/time_hint"
                        android:textColorHint="@color/white"
                        android:padding="@dimen/dp_16"
                        android:drawableStart="@drawable/ic_meeting_time_new"
                        android:drawablePadding="@dimen/dp_16"
                        android:fontFamily="@font/nunito"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/white"
                        android:id="@+id/start_time_text_view"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:background="@drawable/passcode_background"
                        android:textColorHint="@color/white"
                        android:onClick="endTimePicker"
                        android:padding="@dimen/dp_16"
                        android:drawablePadding="@dimen/dp_16"
                        android:drawableStart="@drawable/ic_meeting_time_new"
                        android:layout_marginStart="@dimen/dp_64"
                        android:fontFamily="@font/nunito"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/white"
                        android:id="@+id/end_time_text_view"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                    android:layout_marginStart="330dp"
                    android:text="@string/field_cant_be_empty"
                    android:textColor="@color/error_color"
                    android:fontFamily="@font/nunito"
                    android:visibility="gone"
                    android:layout_below="@+id/duration_min_layout"
                    android:id="@+id/end_time_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/book_confirm"
                    android:gravity="center"
                    android:onClick="confirmBookMeeting"
                    android:layout_width="@dimen/dp_244"
                    android:layout_height="@dimen/dp_48"
                    android:layout_alignParentBottom="true"
                    android:text="@string/confirm_booking"
                    android:layout_marginBottom="@dimen/dp_60"
                    android:textStyle="bold"
                    android:background="@drawable/action_button_border"
                    android:fontFamily="@font/nunito"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/dp_24"
                    android:textSize="@dimen/sp_18"/>

        </RelativeLayout>
</RelativeLayout>
